--- a/shelf/templates/shelf/author_list.html
+++ b/shelf/templates/shelf/author_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{%  block 'content' %}
+{%  block content %}
 <ul>
     {% for author in object_list %}
         <li><a href="{% url 'shelf:author-detail' author.id %}">{{ author.first_name }} {{  author.last_name }}</li></a>
