--- a/shelf/templates/shelf/publisher_list.html
+++ b/shelf/templates/shelf/publisher_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{%  block 'content' %}
+{%  block content %}
 <ul>
     {% for publisher in object_list %}
         <li>{{ publisher.name }}</li>
