'zmiany_po_08_bez_9.1'

--- a/shelf/templates/shelf/author_detail.html
+++ b/shelf/templates/shelf/author_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{%  block content %}
+{% block content %}
 
 <div><a href="{% url 'shelf:author-list' %}">Powrót do listy autorów</a></div>
 
@@ -9,8 +9,8 @@ Profil autora: {{ object.last_name }}, {{ object.first_name }}
 <h2>Książki:</h2>
 <ul>
 {% for book in object.book_set.all %}
-        <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
-        </li>
+    <li><a href="{{ book.get_absolute_url }}">{{ book.title }}</a></li>
 {% endfor %}
 </ul>
+
 {% endblock %}
