--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,7 @@
     <!-- treść każdej strony -->
 
     <div>
-    MENU GŁÓWNE:{% if user.is_authenticated %}<a href ="{% url 'account_logout' %}">Wyloguj się</a> {% else %} <a href ="{% url 'account_login' %}">Zaloguj się</a>, <a href ="{% url 'account_signup' %}">Załóż konto</a> {% endif %}
-    </div>
+    MENU GŁÓWNE: {% if user.is_authenticated %}<a class="btn btn-default" href="{% url 'account_logout' %}">Wyloguj się</a> {% else %}<a class="btn btn-default" href="{% url 'account_login'%} ">Zaloguj się</a>, <a class="btn btn-default" href="{% url 'account_signup' %}">Załóż konto</a>{% endif %}
 
 
     {% block content%}
