--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,27 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
         "http://www.w3.org/TR/xhtmll/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-
+{% load staticfiles %}
+{% load bootstrap3 %}
 <head>
     <title>{% block title %}tytuł strony{% endblock %}</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
     <meta name="generator" content="Pycharm"/>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 
 <body>
     <!-- treść każdej strony -->
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
+    {% bootstrap_messages %}
     <div>
     MENU GŁÓWNE: {% if user.is_authenticated %}<a class="btn btn-default" href="{% url 'account_logout' %}">Wyloguj się</a> {% else %}<a class="btn btn-default" href="{% url 'account_login'%} ">Zaloguj się</a>, <a class="btn btn-default" href="{% url 'account_signup' %}">Załóż konto</a>{% endif %}
-    {% load socialaccount %}
-    <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2</a>
+    </div>
+   {# CO JA PACZAM <img src="{ static "kotek.jpg" #" alt="kotel"> #}
 
     {% block content%}
 
 
     {% endblock %}
 </body>
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '805254069586034',
-      xfbml      : true,
-      version    : 'v2.5'
-    });
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
 </html>
