--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 Strona główna
-
+<ul>
+<li><a href="{% url 'shelf:book-list'%}">Lista jawna (książki)</a></li>
+<li><a href="{% url 'shelf:author-list'%}">Lista tajna (autorzy)</a></li>
+</ul>
 
 {% endblock %}
 
